--- a/app/src/main/res/layout/activity_topology.xml
+++ b/app/src/main/res/layout/activity_topology.xml
@@ -15,35 +15,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
+        android:layout_marginBottom="20dp"
         android:id="@+id/textView5"
         android:textSize="36sp"
         android:textColor="#fff"
         android:fontFamily="sans-serif-light" />
-        <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="8"
-            android:background="@android:color/black">
             <LinearLayout
                 android:id="@+id/ll_topology"
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="#fff">
-                <HorizontalScrollView
-                android:layout_width="wrap_content" android:layout_height="wrap_content">
+                android:layout_height="0dp"
+                android:layout_weight="8"
+                android:background="#66FFFffF">
+
                 <cse.opa.and.ZoomView
                     android:id="@+id/zv_zoomview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
                     <cse.opa.and.TopologyGraphView
                         android:id="@+id/tgv_topology"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
                 </cse.opa.and.ZoomView>
-                </HorizontalScrollView>
             </LinearLayout>
-        </ScrollView>
 
     <View
         android:layout_width="match_parent"
