--- a/app/src/main/res/layout/activity_topology.xml
+++ b/app/src/main/res/layout/activity_topology.xml
@@ -9,17 +9,45 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     android:background="@drawable/background_gradient">
-
-    <TextView
-        android:text="Topology"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        android:minHeight="?android:attr/actionBarSize"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginBottom="20dp"
-        android:id="@+id/textView5"
-        android:textSize="36sp"
-        android:textColor="#fff"
-        android:fontFamily="sans-serif-light" />
+        app:titleTextColor="@android:color/white">
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="start"
+            android:layout_marginRight="15dp"
+            android:visibility="visible"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_back"/>
+        <TextView
+            android:text="Network Topology"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:id="@+id/textView5"
+            android:textColor="#fff"
+            android:textSize="26sp"/>
+        <ImageView
+            android:id="@+id/iv_devices_details_list"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="end"
+            android:layout_marginRight="10dp"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:visibility="invisible"
+            android:src="@drawable/ic_list"/>
+    </android.support.v7.widget.Toolbar>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
             <LinearLayout
                 android:id="@+id/ll_topology"
                 android:orientation="vertical"
@@ -27,7 +55,6 @@
                 android:layout_height="0dp"
                 android:layout_weight="8"
                 android:background="#66FFFffF">
-
                 <cse.opa.and.ZoomView
                     android:id="@+id/zv_zoomview"
                     android:layout_width="match_parent"
@@ -36,37 +63,83 @@
                 </cse.opa.and.ZoomView>
             </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"/>
-    <LinearLayout
-        android:layout_gravity="bottom"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.5"/>
+            <LinearLayout
+                android:layout_gravity="bottom"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:elevation="10dp">
 
-        <Button
-            android:text="Save"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:id="@+id/btn_save_topology"
-            android:layout_weight="1"
-            android:background="@null"
-            android:textColor="#fff"
-            android:fontFamily="sans-serif-light"
-            android:elevation="0dp" />
+                <Button
+                    android:text="Save"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:id="@+id/btn_save_topology"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:textColor="#fff"
+                    android:fontFamily="sans-serif-light"
+                    android:elevation="0dp" />
 
-        <Button
-            android:text="Report"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:id="@+id/btn_generate_report"
-            android:layout_weight="1"
-            android:background="@null"
-            android:textColor="#fff"
-            android:fontFamily="sans-serif-light"
-            android:textSize="14sp" />
-    </LinearLayout>
+                <Button
+                    android:text="Report"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:id="@+id/btn_generate_report"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:textColor="#fff"
+                    android:fontFamily="sans-serif-light"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_devices_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_gravity="bottom"
+            android:visibility="gone"
+            android:orientation="vertical"
+            android:background="@drawable/bottom_list_background">
+            <ListView
+                android:id="@+id/lv_devices"
+                android:divider="@null"
+                android:dividerHeight="0dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ll_device_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_gravity="bottom"
+            android:visibility="gone"
+            android:orientation="vertical"
+            android:background="@drawable/bottom_list_background">
+            <TextView
+                android:id="@+id/tv_device_details"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"/>
+
+        </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
