--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#2c3e50</color>
     <color name="colorPrimaryDark">#2c3e50</color>
-    <color name="colorAccent">#0F2027</color>
+    <color name="colorAccent">#2c3e50</color>
     <color name="black_overlay">#66000000</color>
 
 
