--- a/app/src/main/res/layout/activity_topology.xml
+++ b/app/src/main/res/layout/activity_topology.xml
@@ -106,7 +106,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_gravity="bottom"
-            android:visibility="gone"
+            android:visibility="invisible"
             android:orientation="vertical"
             android:background="@drawable/bottom_list_background">
             <ListView
@@ -125,7 +125,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_gravity="bottom"
-            android:visibility="gone"
+            android:visibility="invisible"
+            android:clickable="true"
             android:orientation="vertical"
             android:background="@drawable/bottom_list_background">
             <TextView
