--- a/app/src/main/res/layout/activity_topology.xml
+++ b/app/src/main/res/layout/activity_topology.xml
@@ -117,28 +117,34 @@
                 android:layout_height="match_parent"/>
 
         </LinearLayout>
+
         <LinearLayout
             android:id="@+id/ll_device_details"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_gravity="bottom"
-            android:visibility="invisible"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/bottom_list_background"
             android:clickable="true"
             android:orientation="vertical"
-            android:background="@drawable/bottom_list_background">
+            android:visibility="invisible">
+
+            <ScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/tv_device_details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
-                android:textSize="18sp"
-                android:textColor="@android:color/black"/>
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+            </ScrollView>
 
         </LinearLayout>
     </FrameLayout>
