--- a/app/src/main/res/layout/activity_list_of_topologies.xml
+++ b/app/src/main/res/layout/activity_list_of_topologies.xml
@@ -10,7 +10,7 @@ android:paddingLeft="@dimen/activity_horizontal_margin"
 android:paddingRight="@dimen/activity_horizontal_margin"
 android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background_gradient"
-tools:context="cse.opa.and.ListOfTopologies">
+tools:context="cse.opa.and.Activity.TopologyListActivity">
 
 <!--<TextView
     android:text="Welcome,"
